# rust-linkshortener-complete

./: Cargo.toml  Makefile  cmds  docker-compose.yaml
migrations/: 20240519172502_link_statistics.up.sql  20240520110049_settings.up.sql
src/: auth.rs  main.rs  routes.rs  utils.rs
