[package]
name = "rust-shortlink-try2"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
axum-prometheus = "0.6.1"
base64 = "0.22.1"
chrono = { version = "0.4.38", features = ["serde"] }
dotenv = "0.15.0"
dotenvy = "0.15.7"
futures = "0.3.30"
metrics = "0.22.3"
metrics-exporter-prometheus = "0.14.0"
rand = "0.8.5"
reqwest = { version = "0.12.4", features = ["blocking", "json"] }
serde = { version = "1.0.202", features = ["derive"] }
serde_json = "1.0.117"
sha3 = "0.10.8"
sqlx = { version = "0.7.4", features = ["mysql", "postgres", "runtime-tokio-native-tls"] }
tokio = { version = "1.37.0", features = ["full", "macros"] }
tower = "0.4.13"
tower-http = { version = "0.5.2", features = ["trace"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
url = "2.5.0"
uuid = { version = "1.8.0", features = ["v4", "fast-rng"] }
